--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@700&family=IBM+Plex+Sans:wght@700&family=Josefin+Sans:wght@300&family=League+Spartan:wght@700&family=Lexend+Deca:wght@700&family=Outfit:wght@700&family=Overpass:wght@700&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <script src="app.js"></script>
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
