--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -20,13 +20,20 @@
 </head>
 <body>
 
-  We're coming soon
-
+<main>
+<div class="header-logo">
+  <img src="images/logo.svg" alt="Base Apparel Logo">
+</div>
+<div class="container-1">
+  <h1 class="heading-1">
+  We're <b>coming soon</b>
+</h1>
   Hello fellow shoppers! We're currently building our new fashion store. 
   Add your email below to stay up-to-date with announcements and our launch deals.
 
   Email Address
-  
+</div>
+</main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
