--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -26,12 +26,20 @@
 </div>
 <div class="container-1">
   <h1 class="heading-1">
-  We're <b>coming soon</b>
+  We're <span class="heading-span-1">coming soon</span>
 </h1>
-  Hello fellow shoppers! We're currently building our new fashion store. 
+  <span class="description">Hello fellow shoppers! We're currently building our new fashion store. 
   Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
+  </span>
+<form>
+  <div class="form-email">
+    <input type="email" placeholder="Email Address">
+    <span class="error">Please provide a valid email</span>
+    <div class="button">
+      <img class="arrow-icon" src="images/icon-arrow.svg" alt="Arrow Icon">
+    </div>
+  </div>
+</form>
 </div>
 </main>
   <footer>
