--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -41,6 +41,11 @@
   </div>
 </form>
 </div>
+
+<div class="container-2">
+  <img class="hero-desktop" src="images/hero-desktop.jpg" alt="Image of a girl">
+  <img class="hero-mobile" src="images/hero-mobile.jpg" alt="Image of a girl">
+</div>
 </main>
   <footer>
     <p class="attribution">
