--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -35,9 +35,9 @@
   <div class="form-email">
     <input type="email" placeholder="Email Address">
     <span class="error">Please provide a valid email</span>
-    <div class="button">
+    <button class="button">
       <img class="arrow-icon" src="images/icon-arrow.svg" alt="Arrow Icon">
-    </div>
+    </button>
   </div>
 </form>
 </div>
