--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -35,6 +35,7 @@
   <div class="form-email">
     <input type="email" placeholder="Email Address">
     <span class="error">Please provide a valid email</span>
+    <img class="error-icon" src="images/icon-error.svg" alt="Error Icon">
     <button class="button">
       <img class="arrow-icon" src="images/icon-arrow.svg" alt="Arrow Icon">
     </button>
